cabal-version: 2.4
name: pact-time
version: 0.1.0.0
synopsis: Time Library for Pact
Description:
    A minimal time library for usage with the [Pact Smart Contract
    Language](https://github.com/kadena-io/pact/).

    The focus of this library is on minimality, performance, and binary level
    stability. Time is represented as 64-bit integral value that counts
    micro-seconds since the modified Julian date epoch (MJD). The implementation
    ignores leap seconds.

    While the library can parse date-time values with time zones, internally all
    date-times are represented as UTC and formatting only supports UTC. Only
    the default English language locale is supported.

    Detail about supported formats can be found in the [Pact Language
    Reference](https://pact-language.readthedocs.io/en/stable/pact-reference.html#time-formats).

homepage: https://github.com/kadena-io/pact-time
bug-reports: https://github.com/kadena-io/pact-time/issues
license: BSD-3-Clause
license-file: LICENSE
author: Lars Kuhtz
maintainer: lakuhtz@gmail.com
copyright: Copyright (c) 2021 Kadena LLC.
category: Data, System
tested-with:
    GHC==8.10.4
    GHC==8.8.4
    GHC==8.6.5
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/kadena-io/pact-time.git

flag with-time
    description: Use the time package for parsing and formatting
    manual: True
    default: False

library
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
        -Wall
    exposed-modules:
        Data.Time
        Data.Time.Internal
        Data.Time.Format
        Data.Time.System
    build-depends:
        -- external
          base >=4.11 && <4.16
        , attoparsec >= 0.13
        , bytestring >=0.10
        , deepseq >=1.4
        , lens >=4.14
        , mtl >=2.2
        , vector >=0.12
        , vector-space >=0.10
        , Decimal >=0.4
        , cereal >=0.5
        , aeson >=0.11
        , text >=1.2

  if flag(with-time)
    cpp-options: -DWITH_TIME=1
    other-modules: Data.Time.Format.External
    build-depends: time >= 1.8
  else
    cpp-options: -DWITH_TIME=0
    other-modules:
        Data.Time.Format.Internal
        Data.Time.Format.Locale
    build-depends: clock >= 0.7.2

